# goshdarnhomefolderisamessagain

./: categories.txt  main.py  pyproject.toml  tmp.py
scripts/: qwen3_vl_reranker.py
